# RubixCubeSolver

./: .gitignore  Cargo.toml  Makefile  README.org  flake.nix  justfile  out  plotting_ins.txt  shell.nix  to_png.sh
benches/: cycling_benchmark.rs
drawing/: Cargo.toml
drawing/src/: cube2x2.rs  lib.rs  piece.rs  scene.rs  stiker.rs  utils.rs
files_for_generating/: Makefile  to_png.sh
m_per_n/: Cargo.toml
m_per_n/src/: lib.rs  mat_inverse.rs  mats.rs  vec3.rs
shared/: Cargo.toml
shared/src/: colors.rs  display.rs  graphical.rs  lib.rs  solve.rs  ui.rs
shared/src/graphical/: piece.rs  scene.rs  sticker.rs  utils.rs
src/: bfsing.rs  colors.rs  declarations.rs  draw_main.rs  drawing.rs  input.rs  lib.rs  main.rs
src/drawing/: matmath.rs  mats.rs  mod.rs
tribaitri/: Cargo.toml
tribaitri/src/: bfsing.rs  input.rs  lib.rs  moving.rs
tubaitu/: Cargo.toml  README.org
tubaitu/benches/: cycling_benchmark.rs
tubaitu/drawing/: cube.rs  piece.rs  scene.rs  stiker.rs  utils.rs
tubaitu/src/: bfsing.rs  colors.rs  declarations.rs  drawing.rs  graphical.rs  input.rs  lib.rs  printing.rs  tests.rs
tubaitu/src/drawing/: cube.rs  piece.rs  scene.rs  stiker.rs
