[package]
name = "cubs"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tubaitu",
    "m_per_n", "tribaitri", "shared",
]

[dependencies]
tubaitu = { path = "./tubaitu" }
tribaitri = { path = "./tribaitri" }

[workspace.dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }

