[package]
name = "cubs"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
        "shared", "m_per_n", "tubaitu",  "tribaitri", 
]

[dependencies]
tubaitu = { path = "./tubaitu" }
tribaitri = { path = "./tribaitri" }
shared = { path = "./shared" }
rayon = "1.10.0"

[profile.release]
opt-level = 3
debug = false
strip = true
codegen-units = 1
lto = true
overflow-checks = false
