[package]
name = "cubs"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "shared", "m_per_n", "tubaitu",  "tribaitri", "drawing"
]

[dependencies]
tubaitu = { path = "./tubaitu" }
tribaitri = { path = "./tribaitri" }
shared = { path = "./shared" }
m_per_n = { path = "./m_per_n" }
drawing = { path = "./drawing" }
macroquad = "0.4.8"

[profile.release]
opt-level = 3
debug = false
strip = true
codegen-units = 1
lto = true
overflow-checks = false
