[package]
name = "drawing"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m_per_n = { path = "../m_per_n" }
shared = { path = "../shared" }
tubaitu = { path = "../tubaitu" }
geo = "0.28.0"
geo-booleanop = "0.3.2"