[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false  }
m_per_n = { path = "../m_per_n" }
geo = "0.28.0"
geo-booleanop = "0.3.2"